apps/lubeLogger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubelogger
  labels:
    app: lubelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lubelogger
  template:
    metadata:
      labels:
        app: lubelogger
    spec:
      containers:
        - name: lubelogger
          image: ghcr.io/hargata/lubelogger:v1.7.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /App/data
              name: data
            - mountPath: /root/.aspnet/DataProtection-Keys
              name: keys
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lubelogger-data
        - name: keys
          persistentVolumeClaim:
            claimName: lubelogger-keys
