apps/lubeLogger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
spec:
  selector:
    app: lubelogger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
