apps/lubeLogger/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: lubelogger
 namespace: lubelogger
spec:
 hostnames:
 - garage.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
 rules:
  - backendRefs:
    - name: lubelogger
      port: 8080
